deployments/workload.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: osticket
spec:
  selector:
    matchLabels:
      app: osticket
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: osticket
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - env:
        - name: site
          value: support
        image: registry.support.tools/mattox-engineering/support/osticket:BUILD_NUMBER
        imagePullPolicy: IfNotPresent
        name: osticket
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 80
            scheme: HTTP
          periodSeconds: 2
          successThreshold: 1
          timeoutSeconds: 2
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 80
            scheme: HTTP
          periodSeconds: 2
          successThreshold: 2
          timeoutSeconds: 2
